# python-project-lvl4

./: .coveragerc  .env_example  .gitignore  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requriments.txt  setup.cfg
.github/workflows/: python-ci.yaml
label/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
label/migrations/: 0001_initial.py  0002_auto_20210908_1610.py
label/templates/: create_label.html  delete_label.html  labels.html  update_label.html
label/tests/: test_access.py  test_access_label.py  test_create_label.py  test_delete_label.py  test_update_label.py
status/: apps.py  exceptions.py  fields.py  forms.py  models.py  selectors.py  services.py  tests.py  urls.py  views.py
status/fixtures/: statuses.yaml
status/migrations/: .0002_status_created_at.py.icloud  0001_initial.py  0002_status_created_at.py  0003_auto_20210908_1610.py
status/templates/: create_status.html  delete_status.html  edit_status.html  statuses.html  update_status.html
status/tests/: test_access_status.py  test_create_status.py  test_delete_status.py  test_update_status.py
task/: apps.py  decorators.py  exceptions.py  fields.py  filters.py  forms.py  mixins.py  models.py  selectors.py  services.py  urls.py  views.py
task/fixtures/: tasks.yaml
task_manager/: http_status.py  mixins.py  settings.py  shortcuts.py  status.py  urls.py  views.py
test_app/: models.py
user/: admin.py  apps.py  decorators.py  exceptions.py  fields.py  forms.py  mixins.py  models.py  selectors.py  services.py  tests.py  urls.py  views.py
(+152 files in other folders)
