[tool.poetry]
name = "hexlet-code"
version = "0.1.6"
description = ""
authors = ["Konstantin Freidlin <freidlinks@ya.ru>"]

[tool.poetry.dependencies]
python = "3.9.6"
Django = "^3.2.6"
python-dotenv = "^0.19.0"
dj-database-url = "^0.5.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.1"
django-bootstrap4 = "^3.0.1"
PyYAML = "^5.4.1"
coverage = "^5.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
